Fix Alignment of Tailsweep and Accent Thumbnails

--- a/resources/assets/less/uniform-builder.less
+++ b/resources/assets/less/uniform-builder.less
@@ -4625,24 +4625,6 @@ div.header-container.main {
 
                         }
 
-                        div.sub1.patternThumb {
-
-                            padding: 30px;
-
-                        }
-
-                        div.sub1.tailSweepThumb { 
-
-                            padding: 30px;
-
-                        }
-
-                        div.sub1.accentThumb { 
-
-                            padding: 30px;
-
-                        }
-
                         display: inline-block;
                         text-align: center;
                         width: 100%;
